--- a/style.css
+++ b/style.css
@@ -44,3 +44,42 @@ div{
     font-weight: bold;
     margin-right: auto;
 }
+/*Home CSS*/
+#home{
+    display: flex;
+    max-width: 1200px;
+    padding-top: 40px;
+    margin: auto;
+    color: white;
+    font-family:"SF Pro Text", "SF Pro Icons", "AOS Icons", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.title-graphics img{
+    max-width: 700px;
+    border-radius: 4%;
+}
+.title{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.title h1{
+    font-size: 3.5rem;
+    margin: 0;
+}
+.title p{
+    font-size: 1.2em;
+    padding: 8px 0;
+}
+.signup-btn{
+    border-radius: 30px;
+    border: 2px solid white;
+    font-size: 1.1rem;
+    padding: 10px 40px;
+    margin: 0 10px;
+    background-color: white;
+    color:#5E3DEE;
+}
+.signup-btn:hover{
+    color: white;
+    background-color: #5E3DEE;
+}
