--- a/style.css
+++ b/style.css
@@ -88,33 +88,37 @@ div{
 
 /* description css */
 .marketing, .cards{
-max-width: 1000px;
+max-width: 1450px;
 margin: auto;
-border: 1px solid;
 }
 .marketing h2{
-    font-size: 2rem;
+    font-size: 2.3rem;
     text-align: center;
     max-width: 600px;
-    margin: auto;
+    margin: 10px auto;
     margin-bottom: 50px;
 }
 .cards{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
 }
 .marketing-card img{
-width:80%;
+max-width:100%;
+margin-bottom: 20px;
 }
 .marketing-card{
-    border: 1px solid;
-    max-width: 25%;
+    max-width: 100%;
 }
 .marketing-card div{
     text-align:center;
+    line-height: 1.3rem;
 }
 .title-text{
-font-size: 1.2 rem;
+font-size: 1.5em;
 font-weight:bold;
+margin-bottom: 10px;
+}
+.soft{
+    color: #666666;
 }
