feat: Testimonial Section Completed.

--- a/style.css
+++ b/style.css
@@ -185,15 +185,27 @@ margin-bottom: 10px;
 /* Testimonial Section*/
 #testimonials{
     display: flex;
+    padding: 60px;
 }
 .profile-image img{
     border-radius: 50%;
-    max-width: 300px;
+    max-width: 170px;
 }
 .feedback{
+    margin-left: 30px;
+}
+.feedback p{
     color: #666;
-    font-style: italic;
-    padding: 10px;
+    font-style: lighter;
     line-height: 1.5rem;
-    margin-left: 20px;
+}
+.feedback p.name{
+    color: #000;
+    font-style: normal;
+    font-weight: bold;
+}
+
+/* Subscribe Section */
+#subscribe{
+    
 }
