--- a/style.css
+++ b/style.css
@@ -210,3 +210,17 @@ margin-bottom: 10px;
     background-color: #eee;
     border-radius: 20px;
 }
+.form{
+    max-width: 600px;
+    text-align: center;
+    margin: auto;
+}
+.email{
+    width: 100%;
+    line-height: 2rem;
+}
+.agree{
+    color: #666;
+    padding: 10px;
+    text-align: left;
+}
