--- a/style.css
+++ b/style.css
@@ -211,6 +211,7 @@ margin-bottom: 10px;
 #subscribe{
     max-width: 1000px;
     margin: auto;
+    margin-bottom: 30px;
     background-color: rgb(229, 237, 249);
     border-radius: 20px;
     padding: 150px 0;
@@ -253,4 +254,35 @@ margin-bottom: 10px;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin: auto;
+    color: white;
+}
+.footer-section{
+    width: 400px;
+    line-height: 1.5rem;
+    padding: 20px;
+}
+.footer-section h3{
+    font-size: 1.5rem;
+}
+.footer-section ul{
+    list-style: none;
+    padding-left: 15px;
+}
+.rect ul{
+    list-style: square;
+}
+.footer-frame{
+    position: relative;
+    bottom: -5px;
+}
+.light-hr{
+    background-color: white;
+}
+.copyright{
+    max-width: 1000px;
+    margin: auto;
+    text-align: center;
+    color: white;
+    padding: 20px;
 }
