--- a/style.css
+++ b/style.css
@@ -285,3 +285,18 @@ margin-bottom: 10px;
     color: white;
     padding: 20px;
 }
+.social{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+}
+.social div{
+    padding: 20px;
+}
+.social i{
+    font-size: 3.5rem;
+}
+.social div:hover{
+    border: 0.5px solid rgb(227, 219, 219);
+}
