--- a/style.css
+++ b/style.css
@@ -293,6 +293,7 @@ margin-bottom: 10px;
 }
 .social div{
     padding: 20px;
+    cursor: pointer;
 }
 .social i{
     font-size: 3.5rem;
@@ -300,3 +301,6 @@ margin-bottom: 10px;
 .social div:hover{
     border: 0.5px solid rgb(227, 219, 219);
 }
+
+
+/* Fixed Header Menu */
