--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ margin-bottom: 10px;
     max-width:1000px;
     margin: 100px auto;
 }
+
 .price-cards{
     display: flex;
     flex-direction: row;
@@ -138,6 +139,13 @@ margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 19px;
 }
+
+
+.price-card:hover{
+    transform: scale(1.1);
+    background-color: #f5f5f5;
+}
+
 .price-info{
     text-align: center;
 }
@@ -191,6 +199,9 @@ margin-bottom: 10px;
 .profile-image img{
     border-radius: 50%;
     max-width: 170px;
+}
+.profile-image img:hover{
+   transform: scale(1.3);
 }
 .feedback{
     margin-left: 30px;
@@ -299,7 +310,7 @@ margin-bottom: 10px;
     font-size: 3.5rem;
 }
 .social div:hover{
-    border: 0.5px solid rgb(227, 219, 219);
+    transform: scale(1.3);
 }
 
 
