--- a/style.css
+++ b/style.css
@@ -315,46 +315,110 @@ margin-bottom: 10px;
 
 /*  For Mobile responsive For Mobile responsive For Mobile responsive For Mobile responsive For Mobile responsive For Mobile responsive For Mobile responsive For Mobile responsive For Mobile responsive For Mobile responsive For Mobile responsive For Mobile responsive For Mobile responsive*/
 @media (max-width: 575.98px) {
-    #menu{
-        max-width: 1000px;
-        padding: 10px 10px;
-        margin: auto;
-        display:flex;
-        flex-direction: row;
-        justify-content:flex-start;
-        background-color: #5E3DEE;
-        font-family:"SF Pro Text", "SF Pro Icons", "AOS Icons", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    }
-    div{
-        padding: 5px;
-       /* border: 1px solid grey;*/
-    }
-    .menu-item{
-        color:#ffffffcc;
-        font-weight:lighter;
-        padding: 10px 15px;
-    }
-    .menu-item:hover{
-        color:white;
-    }
-    .container{
-        background-color: #5E3DEE;
-        cursor: pointer;
-        margin-bottom: -1px;
-    }
-    .round-btn{
-        border-radius: 20px;
-        border: 2px solid white;
-        padding: 10px 40px;
-        margin: 0 10px;
-    }
-    .round-btn:hover{
-        background-color: white;
-        color: #5E3DEE;
-    }
+  
+ #menu{
+    display: none;
+ }
+
+ .header{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: #5E3DEE;
+    margin-top: -1px;
+    margin-bottom: -1px;
+ }
+.menu-items{
+    text-align: center;
+
+}
+
+.menu-items li{
+    color: white;
+    padding: 0.5rem;
+}
+
+.menu-items li a{
+    color: white;
+    text-decoration: none;
+}
+
+.menu-items li a:hover{
+    color: rgb(174, 174, 174);
+}
+
+.check {
+    position: absolute;
+    top: 8rem;
+    left: 8rem;
+    height: 3rem;
+    width: 3rem;
+    opacity: 0;
+    z-index: 3;
+}
+
+.check:hover {
+    cursor: pointer;
+}
+
+.check:checked~.menu-items {
+    display: block;
+    transform: translateX(0%);
+    opacity: 1;
+}
+
+.ham-menu {
+    height: 3rem;
+    width: 3rem;
+    position: absolute;
+    top: 8rem;
+    left: 8rem;
+    padding: 0.5rem;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    background-color: black;
+    border-radius: 0.25em;
+}
+
+.ham-menu .line {
+    background-color: white;
+    border-radius: 1em;
+    width: 2rem;
+    height: 0.25rem;
+}
+
+.ham-menu .line1 {
+    transform-origin: 0% 0%;
+    transition: transform 100ms ease-in-out;
+}
+
+.ham-menu .line3 {
+    transform-origin: 0% 100%;
+    transition: transform 100ms ease-in-out;
+}
+
+.check:checked~.ham-menu .line1 {
+    display: block;
+    transform: rotate(45deg);
+}
+
+.check:checked~.ham-menu .line2 {
+    opacity: 0;
+}
+
+.check:checked~.ham-menu .line3 {
+    display: block;
+    transform: rotate(-45deg);
+}
+
+
+
+ 
     #logo{
         font-size: 1.5rem;
-        color: white;
+        color: rgb(0, 0, 0);
         font-weight: bold;
         margin-right: auto;
     }
@@ -636,6 +700,9 @@ margin-bottom: 10px;
 
   /* Small devices (landscape phones, 576px and up) */   /* Small devices (landscape phones, 576px and up) */   /* Small devices (landscape phones, 576px and up) */   /* Small devices (landscape phones, 576px and up) */
   @media (min-width: 576px) and (max-width: 767.98px) {
+    .header{
+        display: none;
+    }
     #menu{
         max-width: 1450px;
         padding: 10px 10px;
@@ -951,6 +1018,9 @@ margin-bottom: 10px;
   
   /* Medium devices (tablets, 768px and up) Medium devices (tablets, 768px and up) Medium devices (tablets, 768px and up) Medium devices (tablets, 768px and up). Medium devices (tablets, 768px and up). Medium devices (tablets, 768px and up). Medium devices (tablets, 768px and up). Medium devices (tablets, 768px and up). Medium devices (tablets, 768px and up) */
   @media (min-width: 768px) and (max-width: 991.98px) {
+    .header{
+        display: none;
+    }
     #menu{
         max-width: 1450px;
         padding: 10px 10px;
@@ -958,7 +1028,7 @@ margin-bottom: 10px;
         display:flex;
         flex-direction: row;
         justify-content: flex-end;
-        background-color: #ee603d;
+        background-color: #5E3DEE;
         font-family:"SF Pro Text", "SF Pro Icons", "AOS Icons", "Helvetica Neue", Helvetica, Arial, sans-serif;
     }
     div{
@@ -1261,8 +1331,11 @@ margin-bottom: 10px;
         transform: scale(1.3);
     }  }
   
-  /* Large devices (desktops, 992px and up) */
+  /* Large devices (desktops, 992px and up) Large devices (desktops, 992px and up)  Large devices (desktops, 992px and up)  Large devices (desktops, 992px and up)  Large devices (desktops, 992px and up)  Large devices (desktops, 992px and up)  Large devices (desktops, 992px and up)  Large devices (desktops, 992px and up)  Large devices (desktops, 992px and up)  Large devices (desktops, 992px and up) */
   @media (min-width: 992px) and (max-width: 1199.98px) {
+    .header{
+        display: none;
+    }
     #menu{
         max-width: 1450px;
         padding: 10px 10px;
@@ -1576,6 +1649,9 @@ margin-bottom: 10px;
   
   /* Extra Large devices (large desktops, 1200px and up) Extra Large devices (large desktops, 1200px and up) Extra Large devices (large desktops, 1200px and up) Extra Large devices (large desktops, 1200px and up) Extra Large devices (large desktops, 1200px and up) Extra Large devices (large desktops, 1200px and up) Extra Large devices (large desktops, 1200px and up) Extra Large devices (large desktops, 1200px and up) Extra Large devices (large desktops, 1200px and up)*/
   @media (min-width: 1200px) {
+    .header{
+        display: none;
+    }
     #menu{
         max-width: 1450px;
         padding: 10px 10px;
