feat: logo padding fixed

--- a/style.css
+++ b/style.css
@@ -323,7 +323,7 @@ margin-bottom: 10px;
  .header{
     display: flex;
     flex-direction: row;
-    /* background-color: #e6d813; */
+    background-color: #5E3DEE; 
     margin-top: -1px;
     margin-bottom: -1px;
  }
@@ -428,6 +428,7 @@ margin-bottom: 10px;
         color: rgb(0, 0, 0);
         font-weight: bold;
         margin-right: auto;
+        padding-top: 18px;
     }
     /*Home CSS*/
     #home{
